--- a/provisioning/roles/webapp-container/templates/apache2.vhost.j2
+++ b/provisioning/roles/webapp-container/templates/apache2.vhost.j2
@@ -13,33 +13,25 @@
 
     DocumentRoot {{ APPWEBROOT }}
     <Directory {{ APPWEBROOT }}>
-        AllowOverride None
+        AllowOverride all
         Require all granted
-
-        ## Start directives copied from standard Sf .htaccess
         DirectoryIndex app.php
+
         <IfModule mod_rewrite.c>
             RewriteEngine On
-
-            RewriteCond %{REQUEST_URI}::$1 ^(/.+)/(.*)::\2$
-            RewriteRule ^(.*) - [E=BASE:%1]
-
-            RewriteCond %{ENV:REDIRECT_STATUS} ^$
-            RewriteRule ^app\.php(/(.*)|$) %{ENV:BASE}/$2 [R=301,L]
-
-            RewriteCond %{REQUEST_FILENAME} -f
-            RewriteCond %{REQUEST_URI} .*\.php
-            # Need to add the phpfpm call here so that php files (including app_dev.php) are passed to FPM
-            RewriteRule ^(.*\.php(/.*)?)$ fcgi://127.0.0.1:9000/%{REQUEST_FILENAME} [P,END]
-
-            RewriteCond %{REQUEST_FILENAME} -f
-            RewriteRule .? - [L]
-
-            RewriteRule .? %{ENV:BASE}/app.php [L]
 
             # The main phpfpm call is added at the end to pass php requests through to FPM
             RewriteRule ^(.*\.php(/.*)?)$ fcgi://127.0.0.1:9000/%{REQUEST_FILENAME} [P,END]
         </IfModule>
         ## End directives copied from standard Sf .htaccess
     </Directory>
+    <Directory /usr/lib/cgi-bin>
+            Require all granted
+    </Directory>
+    <IfModule mod_fastcgi.c>
+            SetHandler php7-fcgi .php
+            Action php7-fcgi /php7-fcgi virtual
+            Alias /php7-fcgi /usr/lib/cgi-bin/php7-fcgi
+            FastCgiExternalServer /usr/lib/cgi-bin/php7-fcgi -socket /var/run/php/php7.0-fpm.sock -pass-header Authorization
+    </IfModule>
 </VirtualHost>
